--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8" />
   <link rel="icon" href="./assets/img/icono-blackjack-definitivo.png" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Black Jack by ErosDevFS</title>
+  <title>Blackjack by ErosDevFS</title>
 
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css"
     integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous" />
@@ -45,6 +45,10 @@
         <h3 class="you">You</h3>
         <div class="card-empty" id="playerCards"></div>
         <p class="points">Points: <span id="pointsPlayer">0</span></p>
+        <div class="play-buttons">
+          <button id="btnHit">HIT</button>
+          <button id="btnStand">STAND</button>
+        </div>
       </div>
 
       <div class="hand machine">
