testing new functions no added yet

--- a/src/index.html
+++ b/src/index.html
@@ -36,13 +36,13 @@
     
     <div class="playing">
       <div class="hand dealer">
-      <h3 class="others">Dealer</h3>
+      <h3 class="others" id="dealer">Dealer</h3>
       <div class="card-empty" id="dealerCards"></div>
       <p class="points">Points: <span id="pointsDealer">0</span></p>
     </div>
 
       <div class="hand player">
-        <h3 class="you">You</h3>
+        <h3 class="you" id="you">You</h3>
         <div class="card-empty" id="playerCards"></div>
         <p class="points">Points: <span id="pointsPlayer">0</span></p>
         <div class="play-buttons">
@@ -52,7 +52,7 @@
       </div>
 
       <div class="hand machine">
-        <h3 class="others">Machine</h3>
+        <h3 class="others" id="machine">Machine</h3>
         <div class="card-empty" id="machineCards"></div>
         <p class="points">Points: <span id="pointsMachine">0</span></p>
       </div>
